--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.example.mytool.ui.util.DateTimePicker?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import tornadofx.control.DateTimePicker?>
 <SplitPane dividerPositions="0.29069767441860467" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
            minWidth="-Infinity" prefHeight="548.0" prefWidth="1034.0" xmlns="http://javafx.com/javafx/11.0.14-internal"
            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.MainController">
