--- a/src/main/resources/com/example/mytool/add-message-modal.fxml
+++ b/src/main/resources/com/example/mytool/add-message-modal.fxml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.AddMessageModalController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.AddMessageModalController">
     <children>
         <TabPane layoutX="23.0" layoutY="8.0" prefHeight="375.0" prefWidth="569.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
@@ -11,36 +19,30 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <GridPane prefHeight="346.0" prefWidth="569.0" vgap="10.0" AnchorPane.bottomAnchor="0.0"
-                                          AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                          AnchorPane.topAnchor="0.0">
+                                <GridPane layoutY="12.0" prefHeight="332.0" prefWidth="569.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="12.0">
                                     <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0"
-                                                           prefWidth="49.0"/>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0" minWidth="10.0"
-                                                           prefWidth="520.0"/>
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="91.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0" minWidth="10.0" prefWidth="478.0" />
                                     </columnConstraints>
                                     <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints maxHeight="104.0" minHeight="0.0" prefHeight="54.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="112.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="103.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="129.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
                                     <children>
-                                        <Label text="Key"/>
-                                        <Label text="Value" GridPane.rowIndex="1"/>
-                                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0"
-                                              GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                        <Label text="Key" />
+                                        <Label text="Value" GridPane.rowIndex="1" />
+                                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                             <children>
-                                                <Button mnemonicParsing="false" text="Add" onAction="#add"
-                                                        fx:id="addBtn"/>
-                                                <Button mnemonicParsing="false" text="Cancel" onAction="#cancel"
-                                                        fx:id="cancelBtn"/>
+                                                <Button fx:id="addBtn" mnemonicParsing="false" onAction="#add" text="Add" />
+                                                <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
                                             </children>
                                         </HBox>
-                                        <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1"
-                                                  fx:id="key"/>
-                                        <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1"
-                                                  GridPane.rowIndex="1" fx:id="value"/>
+                                        <TextArea fx:id="key" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+                                        <TextArea fx:id="value" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextArea fx:id="avroSchema" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label layoutX="10.0" layoutY="114.0" text="Avro Schema" GridPane.rowIndex="2" />
                                     </children>
                                 </GridPane>
                             </children>
@@ -49,7 +51,7 @@
                 </Tab>
                 <Tab text="Headers">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                     </content>
                 </Tab>
             </tabs>
