--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<SplitPane dividerPositions="0.29069767441860467" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="604.0" prefWidth="1122.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.MainController">
+<SplitPane dividerPositions="0.29069767441860467" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="614.0" prefWidth="1279.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.MainController">
     <items>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
             <children>
@@ -35,7 +35,7 @@
                     <!--              </rowConstraints>-->
                     <children>
                         <!--                  <TreeView fx:id="clusterTree" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2"GridPane.rowIndex="1" />-->
-                        <TreeView fx:id="clusterTree" prefHeight="600.0" prefWidth="323.0" />
+                        <TreeView fx:id="clusterTree" prefHeight="600.0" prefWidth="345.0" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
                         <!--                  <ComboBox fx:id="clusterComboBox"   prefWidth="150.0" GridPane.halignment="LEFT" GridPane.valignment="TOP" />-->
                         <!--                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">-->
                         <!--                     <children>-->
@@ -53,21 +53,21 @@
                 </GridPane>
             </children>
         </AnchorPane>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="482.0" prefWidth="592.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="601.0" prefWidth="857.0">
             <children>
-                <TabPane prefHeight="482.0" prefWidth="564.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <TabPane prefHeight="600.0" prefWidth="820.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-29.0" AnchorPane.topAnchor="0.0">
                     <tabs>
                         <Tab text="Data">
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
-                                        <SplitPane dividerPositions="0.1662971175166297, 0.5" orientation="VERTICAL" prefHeight="516.0" prefWidth="736.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
+                                        <SplitPane dividerPositions="0.1662971175166297, 0.5" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
                                             <items>
                                                 <AnchorPane maxHeight="100.0" minHeight="30.0" minWidth="0.0" prefHeight="69.0" prefWidth="427.0">
                                                     <children>
-                                                        <FlowPane prefHeight="30.0" prefWidth="427.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                        <FlowPane prefHeight="30.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                             <children>
-                                                                <Button mnemonicParsing="false" onAction="#retrieveMessages" text="Retrieve Messages">
+                                                                <Button mnemonicParsing="false" onAction="#retrieveMessages" prefHeight="26.0" prefWidth="122.0" text="Retrieve Messages">
                                                                     <FlowPane.margin>
                                                                         <Insets left="10.0" top="5.0" />
                                                                     </FlowPane.margin>
@@ -82,27 +82,28 @@
                                                                         <Insets left="10.0" top="5.0" />
                                                                     </FlowPane.margin>
                                                                 </Label>
-                                                                <TextField fx:id="pollTimeTextField" text="500">
+                                                                <TextField fx:id="pollTimeTextField" prefHeight="26.0" prefWidth="51.0" text="500">
                                                                     <FlowPane.margin>
                                                                         <Insets top="5.0" />
                                                                     </FlowPane.margin>
                                                                 </TextField>
-                                                                <Label text="Max Messages">
+                                                                <Label text="No Messages">
                                                                     <FlowPane.margin>
                                                                         <Insets left="10.0" top="5.0" />
                                                                     </FlowPane.margin>
                                                                 </Label>
-                                                                <TextField fx:id="maxMessagesTextField" text="100">
+                                                <ComboBox fx:id="msgPosition" prefHeight="26.0" prefWidth="83.0" promptText="LAST" />
+                                                                <TextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="45.0" text="100">
                                                                     <FlowPane.margin>
                                                                         <Insets left="10.0" />
                                                                     </FlowPane.margin>
                                                                 </TextField>
-                                                                <Label text="After Timestamp">
+                                                                <Label text="AfterTimestamp">
                                                                     <FlowPane.margin>
                                                                         <Insets left="10.0" top="5.0" />
                                                                     </FlowPane.margin>
                                                                 </Label>
-                                                                <DateTimePicker fx:id="timestampPicker">
+                                                                <DateTimePicker fx:id="timestampPicker" prefWidth="200.0">
                                                                     <FlowPane.margin>
                                                                         <Insets left="10.0" top="5.0" />
                                                                     </FlowPane.margin>
@@ -135,19 +136,19 @@
                                                                                                                                                                             </rowConstraints>
                                                                                                                                                                             <children>
                                                                                                                                                                                 <Label prefHeight="17.0" prefWidth="58.0" text="Key Type" />
-                                                                                                                                                                                <ComboBox prefHeight="26.0" prefWidth="151.0" GridPane.columnIndex="1"   fx:id="keyContentType" />
-                                                                                                                                                                                <Label text="Value Type" GridPane.columnIndex="2" GridPane.rowIndex="0"  >
+                                                                                                                                                                                <ComboBox fx:id="keyContentType" prefHeight="26.0" prefWidth="151.0" GridPane.columnIndex="1" />
+                                                                                                                                                                                <Label text="Value Type" GridPane.columnIndex="2" GridPane.rowIndex="0">
                                                    <GridPane.margin>
                                                       <Insets left="10.0" />
                                                    </GridPane.margin></Label>
-                                                                                                                                                                                <ComboBox prefHeight="26.0" prefWidth="191.0" GridPane.columnIndex="3" GridPane.rowIndex="0"  fx:id="valueContentType" />
+                                                                                                                                                                                <ComboBox fx:id="valueContentType" prefHeight="26.0" prefWidth="191.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
                                                                                                                                                                             </children>
                                                                                                                                                                         </GridPane>
                                                                                                     </children>
                                                                                                 </AnchorPane>
                                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="355.0" prefWidth="726.0">
                                                     <children>
-                                                        <TableView fx:id="messageTable" prefHeight="420.0" prefWidth="797.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                        <TableView fx:id="messageTable" prefHeight="416.0" prefWidth="791.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="0.0">
                                                             <columns>
                                                                 <TableColumn prefWidth="75.0" text="Partition" />
                                                                 <TableColumn prefWidth="75.0" text="Offset" />
@@ -186,7 +187,7 @@
                                                                     </rowConstraints>
                                                                     <children>
                                                                         <Label text="Key" />
-                                                                        <ComboBox prefWidth="150.0" GridPane.columnIndex="1"/>
+                                                                        <ComboBox prefWidth="150.0" GridPane.columnIndex="1" />
                                                                         <Label text="Value" GridPane.rowIndex="1" />
                                                                         <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                                                     </children>
