--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -24,7 +24,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-
 <AnchorPane prefHeight="661.0" prefWidth="1334.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.MainController">
    <children>
       <SplitPane dividerPositions="0.29069767441860467" prefHeight="614.0" prefWidth="1271.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
@@ -62,9 +61,9 @@
               </AnchorPane>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="601.0" prefWidth="857.0">
                   <children>
-                      <TabPane prefHeight="600.0" prefWidth="820.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-29.0" AnchorPane.topAnchor="0.0">
+                      <TabPane fx:id="tabPane" prefHeight="600.0" prefWidth="820.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-29.0" AnchorPane.topAnchor="0.0">
                           <tabs>
-                              <Tab text="Data">
+                              <Tab fx:id="dataTab" text="Data">
                                   <content>
                                       <AnchorPane minHeight="0.0" minWidth="0.0">
                                           <children>
@@ -189,7 +188,7 @@
                                   <content>
                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                           <children>
-                                              <Accordion prefHeight="450.0" prefWidth="429.0">
+                                              <Accordion prefHeight="614.0" prefWidth="936.0">
                                                   <panes>
                                                       <TitledPane animated="false" text="Content Types" visible="false">
                                                           <content>
@@ -222,14 +221,47 @@
                                                                   <children>
                                                                       <TableView fx:id="topicConfigTable" prefHeight="374.0" prefWidth="427.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                           <columns>
-                                                                              <TableColumn prefWidth="138.0" text="Name" />
-                                                                              <TableColumn prefWidth="290.0" text="Value" />
+                                                                              <TableColumn prefWidth="428.0" text="Name" />
+                                                                               <TableColumn prefWidth="300.0" text="Value" />
                                                                           </columns>
                                                                       </TableView>
                                                                   </children>
                                                               </AnchorPane>
                                                           </content>
                                                       </TitledPane>
+                                          <TitledPane fx:id="partitionsTitledPane" animated="false" text="Partitions">
+                                            <content>
+                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                                   <children>
+                                                      <SplitPane dividerPositions="0.05898876404494382" orientation="VERTICAL" prefHeight="536.0" prefWidth="936.0">
+                                                        <items>
+                                                            <HBox prefHeight="36.0" prefWidth="934.0">
+                                                               <children>
+                                                                  <Button mnemonicParsing="false" onAction="#refreshPartitionsTblAction" prefHeight="26.0" prefWidth="72.0" text="Refresh" />
+                                                                  <Label fx:id="totalMessages" prefHeight="28.0" prefWidth="106.0" text="0 Messages">
+                                                                     <HBox.margin>
+                                                                        <Insets left="10.0" />
+                                                                     </HBox.margin>
+                                                                  </Label>
+                                                               </children>
+                                                            </HBox>
+                                                            <TableView fx:id="kafkaPartitionsTable" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="795.0">
+                                                              <columns>
+                                                                  <TableColumn prefWidth="75.0" text="Parttion" />
+                                                                <TableColumn prefWidth="98.0" text="Start Offset" />
+                                                                  <TableColumn prefWidth="83.0" text="End Offset" />
+                                                                  <TableColumn prefWidth="108.0" text="No Messages" />
+                                                                  <TableColumn prefWidth="190.0" text="Leader" />
+                                                                  <TableColumn prefWidth="204.0" text="Replica [In-Sync]" />
+                                                                  <TableColumn prefWidth="217.0" text="Replica [Not-In-Sync]" />
+                                                              </columns>
+                                                            </TableView>
+                                                        </items>
+                                                      </SplitPane>
+                                                   </children>
+                                                </AnchorPane>
+                                            </content>
+                                          </TitledPane>
                                                       <!--                                  <TitledPane animated="false" text="Properties">-->
                                                       <!--                                    <content>-->
                                                       <!--                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" >-->
@@ -250,7 +282,7 @@
                                       </AnchorPane>
                                   </content>
                               </Tab>
-                              <Tab fx:id="offsetsTab" text="CG Offsets">
+                              <Tab fx:id="cgOffsetsTab" text="CG Offsets">
                                   <content>
                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                           <children>
