--- a/src/main/resources/com/example/mytool/error.fxml
+++ b/src/main/resources/com/example/mytool/error.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ErrorController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.ErrorController">
     <center>
         <ScrollPane>
             <content>
