--- a/src/main/resources/com/example/mytool/add-message-modal.fxml
+++ b/src/main/resources/com/example/mytool/add-message-modal.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -39,10 +40,12 @@
                                           <children>
                                               <Label text="Key" />
                                               <Label text="Value" GridPane.rowIndex="1" />
-                                              <TextArea fx:id="key" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-                                              <TextArea fx:id="value" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <TextArea fx:id="schema" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                              <TextArea fx:id="keyTextArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+                                              <TextArea fx:id="valueTextArea" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <TextArea fx:id="schemaTextArea" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                     <Label layoutX="10.0" layoutY="114.0" text="Schema" GridPane.rowIndex="2" />
+                                    <Label text="Label" GridPane.rowIndex="3" />
+                                    <ComboBox fx:id="valueContentTypeComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                           </children>
                                       </GridPane>
                                   </children>
