--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -63,7 +63,7 @@
                   <children>
                       <TabPane fx:id="tabPane" prefHeight="600.0" prefWidth="820.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-29.0" AnchorPane.topAnchor="0.0">
                           <tabs>
-                              <Tab fx:id="dataTab" text="Data">
+                              <Tab fx:id="messagesTab" text="Messages">
                                   <content>
                                       <AnchorPane minHeight="0.0" minWidth="0.0">
                                           <children>
@@ -93,7 +93,7 @@
                                                                               <Insets top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </TextField>
-                                                                      <Label text="No Messages">
+                                                                      <Label text="No Msgs/Partition">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
