--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -147,7 +147,7 @@
                                                          </HBox.margin>
                                                       </Label>
                                                                                                                                                                                       <ComboBox fx:id="valueContentType" prefHeight="26.0" prefWidth="130.0" />
-                                                      <Label prefHeight="17.0" prefWidth="87.0" text="Schema">
+                                                      <Label prefHeight="17.0" prefWidth="87.0" text="Value Schema">
                                                          <HBox.margin>
                                                             <Insets left="10.0" right="10.0" />
                                                          </HBox.margin>
