add EditableTableControl control; refactor code

--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.example.mytool.ui.util.DateTimePicker?>
+<?import com.example.mytool.ui.control.DateTimePicker?>
+<?import com.example.mytool.ui.control.EditableTableControl?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
@@ -63,11 +64,11 @@
                   <children>
                       <TabPane fx:id="tabPane" prefHeight="600.0" prefWidth="820.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-29.0" AnchorPane.topAnchor="0.0">
                           <tabs>
-                              <Tab fx:id="messagesTab" text="Messages">
+                              <Tab fx:id="dataTab" text="Data">
                                   <content>
                                       <AnchorPane minHeight="0.0" minWidth="0.0">
                                           <children>
-                                              <SplitPane dividerPositions="0.1662971175166297, 0.5" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
+                                              <SplitPane fx:id="messageSplitPane" dividerPositions="0.1662971175166297, 0.5" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
                                                   <items>
                                                       <AnchorPane maxHeight="100.0" minHeight="30.0" minWidth="0.0" prefHeight="69.0">
                                                           <children>
@@ -180,6 +181,16 @@
                                                       </AnchorPane>
                                                   </items>
                                               </SplitPane>
+                                    <SplitPane dividerPositions="0.4814516129032258" orientation="VERTICAL" prefHeight="622.0" prefWidth="936.0" visible="false">
+                                      <items>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                                             <children>
+                                                <EditableTableControl layoutY="7.0" minHeight="200.0" prefHeight="297.0" prefWidth="924.0" AnchorPane.bottomAnchor="-7.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                                             </children>
+                                        </AnchorPane>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+                                      </items>
+                                    </SplitPane>
                                           </children>
                                       </AnchorPane>
                                   </content>
